fixed table too wide problem

--- a/madura-workflow-ui/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/madura-workflow-ui/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -100,6 +100,9 @@ $v-animations-enabled: false;
 	vertical-align:top;
 }
 .v-verticallayout {
+	margin-left:0px;
+}
+.v-app {
 	margin-left:5px;
 }
 }
